--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,10 @@ dependencies {
 
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt("androidx.room:room-compiler:$room_version")
+    // coroutine for room
+    implementation("androidx.room:room-ktx:$room_version")
+
+    // for livedata coroutine
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.3.1")
 }
